--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     align-items: center;
     padding: 1rem;
 }
-.flash {
+.HSR {
     border: 2px solid yellow;
     width: 60rem;
     height: 5rem;
